# discord-emojis

./: .gitignore  LICENSE  README.md  licensor-config.yaml  pyproject.toml  renovate.json  test.txt
.github/workflows/: CI.yaml  build.yaml  quality.yaml
src/: __main__.py  download_build.py  extract.py
src/parsers/: __init__.py  base.py  emojis_parser.py
