[project]
name = "discord-emojis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "json5>=0.12.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "ruff>=0.11.8",
]

[tool.basedpyright]
typeCheckingMode = "all"
reportUnusedCallResult = false
reportAny = false
