[project]
name = "discord-emojis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "json5>=0.12.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "ruff>=0.11.8",
]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "all"
reportUnusedCallResult = false
reportAny = false

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D203",
    "D213",
    "COM812",
    "EM101",
    "TRY003",
    "T201",
    "D100",
    "D400",
    "D104"
]