# SPDX-License-Identifier: MIT
# Copyright: 2024-2026 Paillat-dev

[project]
name = "discord-emojis"
requires-python = "==3.14.*"
dependencies = [
    "json5>=0.12.0",
    "requests>=2.32.3",
]

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "ruff>=0.11.8",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "all"
reportUnusedCallResult = false
reportAny = false

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D203",
    "D213",
    "COM812",
    "EM101",
    "TRY003",
    "T201",
    "D100",
    "D400",
    "D104"
]

[tool.pdm.scripts]
format = ["ruff", "format", "."]
"format:check" = ["ruff", "format", ".", "--check"]
lint = ["ruff", "check", "."]
"lint:fix" = ["ruff", "check", ".", "--fix"]
"sync-emojis" = ["python", "-m", "src"]
"typecheck" = ["basedpyright", "."]